<resources>
    <string name="app_name">6. AsyncTask And Network</string>
    <string name="enter_server_hostname">Enter Server Hostname</string>
    <string name="locahost">http://10.0.2.2:8080/</string>
    <string name="server">Get from network</string>
    <string name="start_super_complex_task">Start Super Complex Task</string>
    <string name="_1">+1</string>
    <string name="_0">0</string>
    <string name="not_running">Not Running</string>
    <string name="run_in_async">Run in Async</string>
</resources>
